--- a/style.css
+++ b/style.css
@@ -19,14 +19,12 @@ nav{
     align-items: center;
 }
 
-git config --global user.password "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"
+/* git config --global user.password "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"
 
 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
-git remote set-url origin https://oluwaseun7154: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@github.com/oluwaseun7154/css-project.git
+sdfeferf
+git remote set-url origin https://oluwaseun7154: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@github.com/oluwaseun7154/css-project.git */
 
-git@github.com:oluwaseun7154/css-project.git
-
-https://github.com/oluwaseun7154/css-project.git
 nav img{
     width: 50px;
 }
